--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,15 @@ body{
 }
 .player_one{
    background-color: white;
-   
    padding:10px;
    border: 1px solid black;
    border-radius: 10px;
 
 }
+ul{
+    list-style: none;
+}
+
 div a{
     text-decoration: none;
 }
